# notes

./: README.md  dailyNotes.txt  dockerNotes.md  encrypted_token.txt  icDesignNotes.txt  miyuePersonalAccount.txt  tinyLatex.txt  vimSetting.txt
buildingDesign/: electricPowerDesign.md  structuralMechanics.md
cs/: QtDevNotes.md  assemblyNotes.md  cLanguageNotes.md  computerNotes.md  computerScience.md  cppLanguageNotes.md  dataStructureNotes.txt  database.md  dockerNotes.md  dotNetNotes.md  encryption.md  gitNotes.md  hackingNotes.md  linuxCommon.md  linuxNotes_en.md  network_physicalLayer.md  pyVirtualEnvNotes.txt  vimNotes.md  vimSetting.txt  webDevNotes.md  windowsNotes_en.md
engineering/: electricCircuits.md  electricalPowerSystem.md  electricalPowerSystem_en.md  others.md  robots.md  spaceTransportation.md
jobNotes/: groundStation.md  groundStationWorkingNotes.md  workingNotes.txt
languages/: english.md  linguistics.md
marvels/: baoNueTongHua_world_view.md  ch1.txt  ch2.txt  largeSeriesWritingTips.md  temp.txt
math/: EulerEuqationProof.md  SequencesAndAlgorithmEfficiency.tex  Sequences_And_Algorithm_Efficiency.tex  TheSpeedOfSequencesAndSeries.tex  The_Study_Of_Rate_Of_Convergence_Of_Sequences_And_Efficience_Of_An_Algorithm.tex  calculusNotes.md  graphTheory.md  statics.txt  statisticsAndProbability.md
other/: atmosphericScience.md  biologyScience.md  economy.md  nutritionalScience.md
physics/: Electrodynamics.md  NewtonMechanics.md  astronomy.md  (+3 more)
schedule/backend/app/: main.py  pyproject.toml
schedule/backend/app/data/: schedule.json
(+241 files in other folders)
